[package]
name = "modbus_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
data_hook = { git = "https://github.com/AnlangA/data_hook", branch = "main" }
eframe = { version = "0.32.1" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-modbus = { git = "https://github.com/AnlangA/tokio-modbus", branch = "anlang" }
