[package]
name = "modbus_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
data_hook = { git = "https://github.com/AnlangA/data_hook", branch = "master" }
eframe = { version = "0.32.1" }
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["full"] }
tokio-modbus = { git = "https://github.com/AnlangA/tokio-modbus", branch = "anlang" }
tokio-serial = "5.4.5"
serialport = "4.0"
tokio-util = "0.7.16"
log = "0.4"
